# gyroxinput

./: .gitignore  CMakeLists.txt  README.md  gyro_client.cpp
